deployment/k8s/identityserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-deployment
  labels:
    app: identityserver
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: identityserver
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
      - name: identityserver
        image: mental001/socialnetwork.identityserver:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        volumeMounts:
          - mountPath: /cache
            name: cache-volume
          - mountPath: /https
            name: ssl-certificate
      volumes:
        - name: cache-volume
          emptyDir: {}
        - name: ssl-certificate
          secret:
            secretName: ssl-certificate
            defaultMode: 0444
---
apiVersion: v1
kind: Service
metadata:
  name: identityserver-service
spec:
  type: NodePort
  selector:
    app: identityserver
  ports:
  - name: http
    protocol: TCP
    port: 8003
    targetPort: 80
    nodePort: 30003
  - name: https
    protocol: TCP
    port: 8004
    targetPort: 443
    nodePort: 30843
