deployment/k8s/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-deployment
  labels:
    app: portal
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: mental001/socialnetwork.portal:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /https
              name: ssl-certificate
      volumes:
        - name: ssl-certificate
          secret:
            secretName: ssl-certificate
            defaultMode: 0444
---
apiVersion: v1
kind: Service
metadata:
  name: portal-service
spec:
  type: NodePort
  selector:
    app: portal
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30000
    - name: https
      protocol: TCP
      port: 8001
      targetPort: 443
      nodePort: 31000
