deployment/k8s/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-deployment
  labels:
    app: profile
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: mental001/socialnetwork.profile.api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  type: NodePort    
  selector:
    app: profile
  ports:
    - name: http
      protocol: TCP
      port: 8002
      targetPort: 80
      nodePort: 32000
