deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: portal-ingress
spec:
  tls:
  - hosts:
      - kubernetes.docker.internal
    secretName: nginx-ssl-certificate
  ingressClassName: nginx
  defaultBackend:
    service:
      name: portal-service
      port:
        name: http
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal-service
            port:
              name: http
      - path: /profile
        pathType: Prefix
        backend:
          service:
            name: profile-service
            port:
              name: http
      - path: /identityserver
        pathType: Prefix
        backend:
          service:
            name: identityserver-service
            port:
              name: http
